* #5089: show frame shortly when adding object to clipboard (erikos)
* #5097: Fix pasting text between activities through the clipboard. (tomeu)
* #4660: Use improved PS API which streamlines ShareActivity process (smcv)

0.70.1

* #5004 Fix race that caused multiple fake icons appear in the activity frame
  after installing a bundle with Browse. (tomeu)

Snapshot 411879e9de

* #4768 Fix memory leak when switching between activities. (marco)

Snapshot 9d28557bbd

* Fix randr. (marco)
* Do not fail if there is not an activity service. (marco)
* Alert when an activity cannot be saved. (rwh)

Snapshot 47e231311b

* Get rid of sound competely to be sure we don't block the device. (marco)

Snapshot 1bf6cdaa81

* #4728, #4764: Set the correct colors for filtered out mesh view icons. (tomeu)

Snapshot d6bac927e1

* #4667 Do not display XO outside the mesh view. (marco)
* #4687 Use the right free function, fix a crash. (sjoerd)
* #4724 Display meshbox invite palette menu with colored
  activity icon (erikos)
* Always checkin to the DS from a new file. (tomeu)

Snapshot c682a5e241

- #4570: Fix alt-tab and ctrl-alt-tab behavior
- #3605: Make donut activity size fixed
- #4644: Ctrl-Q does not kill Journal
- #4571: Scroll buttons should not be reversed for Arabic

Snapshot 55864fa3f6

* Support for the espeak service. (codyl)
* Fix typo in activity launching code. (marco)

Snapshot e23f012e08

* Launch a few activities outside rainbow containers. (marco)

Snapshot 3e491c2dc7

* #4715: Filter new items that appear in the mesh view. (tomeu)
* #4716: Filter correctly activity icons in the mesh view. (tomeu)
* Use HOME/.i18n in control panel and reset jabber_registered to False (erikos)

Snapshot dae3ebe8d1

Snapshot 306d32832f

* Associate ctrl+s to keep. (rwh)

Snapshot 73cae198f5

* Remove the startup sound for now, to not break audio
  for all the activities. (marco)

Snapshot 0a9676171d

* #4650: Failure to write journal files. (marco)

Snapshot ee8712d1c4
